fixed node's name text overflow in widget and side bar

--- a/src/components/core/BaseNode/Title/Title.module.css
+++ b/src/components/core/BaseNode/Title/Title.module.css
@@ -3,6 +3,8 @@
     display: flex;
     white-space: nowrap;
     justify-items: center;
+    text-overflow: clip;
+    overflow: hidden;
 }
 
 .TitleName {
